# opentelemetry-cpp

./: zzNotes.md
api/include/opentelemetry/context/: context.h
api/include/opentelemetry/trace/: span_context.h
examples/: CMakeLists.txt
examples/common/foo_library/: foo_library.cc
examples/geneva-trace/: CMakeLists.txt  main.cc
examples/grpc/: CMakeLists.txt  client.cc  server.cc  tracer_common.h
examples/http/: CMakeLists.txt  client.cc  server.cc  tracer_common.h
examples/multithreaded/: main.cc
examples/otlp/: http_metric_main.cc
exporters/etw/include/opentelemetry/exporters/etw/: etw_provider.h  etw_tracer.h
exporters/etw/test/: etw_logger_test.cc  etw_provider_test.cc
exporters/otlp/src/: otlp_http_client.cc
zCurl/: curl.txt
